--- a/src/app.css
+++ b/src/app.css
@@ -2,32 +2,40 @@
 @tailwind components;
 @tailwind utilities;
 
-/* @font-face {
+@font-face {
   font-family: "Visit VG";
-  src: local("Visit VG"), local("vg5000"),
+  src:
+    local("Visit VG"),
+    local("vg5000"),
     url("/VG5000-Regular.woff") format("woff");
 }
 
 @font-face {
   font-family: "Roboto";
-  src: local("Roboto"), local("roboto"),
+  src:
+    local("Roboto"),
+    local("roboto"),
     url("/Roboto-Medium.ttf") format("truetype");
   font-weight: 500;
 }
 
 @font-face {
   font-family: "Roboto";
-  src: local("Roboto"), local("roboto"),
+  src:
+    local("Roboto"),
+    local("roboto"),
     url("/Roboto-Bold.ttf") format("truetype");
   font-weight: 700;
 }
 
 @font-face {
   font-family: "Roboto";
-  src: local("Roboto"), local("roboto"),
+  src:
+    local("Roboto"),
+    local("roboto"),
     url("/Roboto-Light.ttf") format("truetype");
   font-weight: 400;
-} */
+}
 
 :root {
   font-family: Roboto, Arial, Sans-Serif;
@@ -41,7 +49,11 @@
 }
 
 h1 {
-  font-family: Visit VG;
+  font-family:
+    Visit VG,
+    Roboto,
+    Arial,
+    Sans-Serif;
   font-size: 50px;
   font-weight: 400;
   line-height: 60px;
