--- a/src/app.css
+++ b/src/app.css
@@ -141,5 +141,6 @@ div.mapboxgl-popup-content,
   top: 34%;
   left: 50%;
   transform: translate(-50%, -50%);
-  height: 50%;
+  max-height: 17px;
+  max-width: 17px;
 }
